--- a/keluarga.html
+++ b/keluarga.html
@@ -62,7 +62,7 @@
             <div class="container">
                 <p>&copy; 2025 Kevin Kristian Pakpahan. All Rights Reserved.</p>
                 <div class="social-media">
-                    <a href="mailto:emailkamu@example.com" target="_blank">
+                    <a href="mailto:pakpahank5@gmail.com" target="_blank">
                         <img src="images/email_logo.png" alt="Email">
                     </a>
                     <a href="tel:+6283843594709" target="_blank">
